Fix flicker when focusing input style (the input move 1 pixel higher)

--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -239,7 +239,7 @@ $m-input-style--padding: 4px !default;
         padding-bottom: $m-input-style--padding;
         background-color: $m-color--white;
 
-        .m--is-focus & {
+        .m--has-border-top.m--is-focus & {
             padding-bottom: $m-input-style--padding / 2;
         }
 
